================================================================================
Change history for glaciers
================================================================================

HIGH PRIORITY:
- hide trash can, put tools away by dragging them back to tool box
- Intro View panel: units, equil line, snowfall, picture
- Advanced View panel: units, equil line, ice flow, coordinates, snowfall, picture
- make shape of surface ripples look random
- provide time estimate for climate experiments interface
- make default speed 2 years per sec
- go back to previous algorithm for trashing a tool? (when tool node overlaps trash can?)
- verify that flags fall over at random angles when they hit the valley floor (drop below and above glacier)
- bug: dragging to the drill to the trash while pressing button results in a borehole being drilled when dropped in trash
- change color of ice surface below ELA to brownish grey as in real picture
? how to add headwall x position to ice thickness model in model.txt
- bug: if ELA gets above headwall, Glacier q_advance_limit causes quasi-ELA to evolve in wrong direction forever
- bug: when advancing glacier reaches ELA, the ELA surface line jumps up/down valley
- bug: Restart clock button does bad things while glacier is evolving, get rid of it?
- thermometer looks lousy while dragging
- thermometer repaints strangely while clock ticks on Mac OS 10.4
- BoreholeDrillIconNode.DRAG_OFFSET breaks when mvt scale is changed, needs to be generalized
- increase mvt y-scale by 2x, decrease birds-eye view camera y-scale by 2x
- switch user-interface between English and metric units
- glacier advances too fast, get model fix from Archie [550]
- debris is reaching the surface above ELA because max thickness is where EL intersects valley floor, Archie will investigate
- add yaw to fake 3D perspective (terminus, ELA, etc) 
- visual representation of snowfall

MEDIUM PRIORITY:
- rename "Basic" tab to "Intro"